<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TV Show Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_overview">Details</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_actors">Cast</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_shows_message"><![CDATA[You have no shows.<br>Tap  to add new show.]]></string>
    <string name="search_hint">Add Show</string>
    <string name="title_activity_details">DetailsActivity</string>

    <color name="holo_blue_light">#ff33b5e5</color>
    <color name="holo_blue_dark">#ff0095ff</color>

    <string name="title_activity_agenda">Calendar</string>
    <string name="title_activity_banner">Download Banner</string>
    <string name="title_activity_profiles">Profiles</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_backup">Backup</string>
    <string name="drawer_open">open</string>
    <string name="drawer_closed">closed</string>
    <string name="restore_warning"><b>Warning!</b> Database will be wiped before restore</string>
    <string name="searching">Searching for \'%s\'</string>
    <string name="no_net">No Internet Connection! Please connect to internet and try again!</string>
    <string name="unsupported_encoding">Network Error: Unsupported encoding</string>
    <string name="url_malformed">Network Error: URL is malformed</string>
    <string name="io_error">Network Error: I/O error</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="no_results">No Results</string>
    <string name="_default">Default</string>
    <string name="user">User</string>
    <string name="show_exists">Show Exists!\nSelect Another</string>
    <string name="download_show">Downloading Show Info</string>
    <string name="add_show">Add new Show</string>
    <string name="powered_by">Powered By</string>
    <string name="add">Add</string>
    <string name="update_all">Update All</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="calendar">Calendar</string>
    <string name="backlog">Backlog</string>
    <string name="Settings">Preferences</string>
    <string name="about">About</string>
    <string name="season">Season %s</string>
    <string name="missed_episodes">Missed Episodes</string>
    <string name="trending_shows">Trending Shows</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="update_images">Update Images</string>
    <string name="sync">Sync</string>
    <string name="upcoming_episode">Upcoming Episode</string>
    <string name="airs">Airs</string>
    <string name="less_than_an_hour">in less than an hour.</string>
    <string name="hours">in %s hours</string>
    <string name="hours_ago">%s hours ago.</string>
    <string name="days_ago">%s days ago.</string>
    <string name="tomorow">tomorrow</string>
    <string name="days">in %s days</string>
    <string name="more_than_a_year">in more than a year</string>
    <string name="more_than_a_year_ago">more than a year ago</string>
    <string name="error_loading_show">Error loading show.</string>
    <string name="rating">Rating</string>
    <string name="Overview">Overview</string>
    <string name="details">Details</string>
    <string name="genres">Genres</string>
    <string name="you">You</string>
    <string name="external">External</string>
    <string name="year"><![CDATA[<b>Year:</b> %s]]></string>
    <string name="country"><![CDATA[<b>Country:</b> %s]]></string>
    <string name="runtime"><![CDATA[<b>Runtime:</b> %s]]></string>
    <string name="status"><![CDATA[<b>Status:</b> %s]]></string>
    <string name="network"><![CDATA[<b>Network:</b> %s]]></string>
    <string name="air_time"><![CDATA[<b>Air Time(UTC):</b> %s]]></string>
    <string name="certification"><![CDATA[<b>Certification:</b> %s]]></string>
    <string name="rating_"><![CDATA[<b>Rating:</b> %s]]></string>
    <string name="watched_episodes"><![CDATA[<b>Watched Episodes:</b> %s]]></string>
    <string name="overview">Overview</string>
    <string name="episodes">Episodes</string>
    <string name="actors">Cast</string>
    <string name="mark_all_watched">mark all watched</string>
    <string name="delete_confirm">Are you sure you want to delete %s\nThis cannot be undone.</string>
    <string name="logout">Logout</string>
    <string name="browse">Browse</string>
    <string name="title_activity_register">Register</string>
    <string name="processing_image">Processing Image/nPlease wait...</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="aired">Aired</string>
    <string name="less_than_an_hour_ago">less than a hour ago.</string>
    <string name="yesterday">yesterday</string>
    <string name="title_activity_episode_details">EpisodeDetailsActivity</string>
    <string name="search_results">Search Results</string>
    <string name="please_wait">Please Wait...</string>
    <string name="error_handling_url">Error Handling Specified Link</string>
	<string name="add_to_fav">Add to \'My Shows\'</string>
	<string name="remove_from_fav">Remove from \'My Shows\'</string>
	<string name="show_added_to_fav">Add to \'My Shows\'</string>
	<string name="show_downloaded">\'%s\' add to \'My Shows\'</string>
	<string name="show_will_be_downloaded">\'%s\' will be add soon.</string>
	<string name="show_removeed_from_fav">Remove from \'My Shows\'</string>
	<string name="my_shows">My Shows</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="prompt_username">Username</string>
    <string name="next_ep_no_info">No information about next episode.</string>
    <string name="skip"><u>Skip</u></string>
    <string name="sync_with_trakt">
        Sync all you shows with trakt?\n
        This will take long time depending on your collection size.\n
        You can view progress in notification bar.
    </string>
    <string name="synchronising_shows">Synchronising Your Shows</string>

</resources>
