<?xml version="1.0" encoding="utf-8"?>
<rs.pedjaapps.tvshowtracker.widget.NotifyingScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.android.volley.ui.NetworkImageViewPlus
            android:id="@+id/ivShowImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
			android:src="@drawable/noimage_fanart"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivShowImage"
            android:background="@drawable/glass_background"
            android:gravity="bottom"
            android:padding="3dip">

            <TextView
                android:id="@+id/tvShowName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="@dimen/padding_large"
                android:text="Game of Thrones"/>

            <TextView
                android:id="@+id/tvShowShortInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/tvShowName"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#ffbbbbbb"
                android:textSize="10.0sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:text="Sunday 6:00pm (UTC) - HBO"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivShowImage"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Overview"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tvOverview"
                    android:text="Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night's Watch, is all that stands between the realms of men and icy horrors beyond."/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tvYear"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:src="@color/grey_bg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tvCountry"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:src="@color/grey_bg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tvRuntime"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:src="@color/grey_bg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tvStatus"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:src="@color/grey_bg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tvNetwork"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:src="@color/grey_bg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tvAirTime"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:src="@color/grey_bg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tvCertification"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:src="@color/grey_bg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tvRating"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:src="@color/grey_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tvGenres"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tvWatchedEpisodes"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/external"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/imdb_icon"
                        android:id="@+id/ivImdb"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/trakt_icon"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/ivTrakt"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</rs.pedjaapps.tvshowtracker.widget.NotifyingScrollView>
